--- a/bat/abs.html
+++ b/bat/abs.html
@@ -311,144 +311,149 @@
 
     <script src="../js/utils.js"></script>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const searchInput = document.getElementById('bus-stop-search'); // Search input field
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
+<script>
+    document.addEventListener('DOMContentLoaded', async () => {
+        const searchInput = document.getElementById('bus-stop-search');
+        const searchBusStopButton = document.getElementById('search-bus-stop-button');
+        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops';
+        const listGroup = document.querySelector('.list-group');
+        const prevButton = document.getElementById('prev-button');
+        const nextButton = document.getElementById('next-button');
+        const limit = 20;
+        let allBusStops = [];
+        let currentPage = 1;
+        let totalPages = 1;
 
-            // Clear the search bar when the "Search Bus Stop" button is clicked
-            searchBusStopButton.addEventListener('click', () => {
-                searchInput.value = ''; // Clear the search input field
-            });
+        // Function to fetch all bus stops in batches
+        async function fetchAllBusStops() {
+            let allBusStops = [];
+            let skip = 0;
+            const batchSize = 500;
 
-            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
-            const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
-            const prevButton = document.getElementById('prev-button'); // Previous button
-            const nextButton = document.getElementById('next-button'); // Next button
-            const limit = 20; // Number of items per page
-            let allBusStops = []; // Store all fetched bus stops for searching
-            let currentPage = 1; // Current page number
-            let totalPages = 1; // Total number of pages
+            while (true) {
+                try {
+                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
+                        method: 'GET',
+                        headers: { accept: 'application/json' },
+                    });
 
-            // Function to fetch all bus stops in batches
-            async function fetchAllBusStops() {
-                let allBusStops = [];
-                let skip = 0;
-                const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
+                    if (!response.ok) throw new Error('Failed to fetch bus stops');
 
-                while (true) {
-                    try {
-                        const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
-                            method: 'GET',
-                            headers: {
-                                accept: 'application/json',
-                            },
-                        });
+                    const data = await response.json();
+                    allBusStops = allBusStops.concat(data.value);
 
-                        if (!response.ok) {
-                            throw new Error('Failed to fetch bus stops');
-                        }
+                    if (data.value.length < batchSize) break;
 
-                        const data = await response.json();
-                        allBusStops = allBusStops.concat(data.value);
-
-                        if (data.value.length < batchSize) {
-                            break; // Exit loop if fewer than `batchSize` items are returned
-                        }
-
-                        skip += batchSize; // Increment skip for the next batch
-                    } catch (error) {
-                        console.error('Error fetching bus stops:', error);
-                        break;
-                    }
+                    skip += batchSize;
+                } catch (error) {
+                    console.error('Error fetching bus stops:', error);
+                    break;
                 }
-
-                // Save the fetched bus stops to localStorage
-                localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
-                return allBusStops;
             }
 
-            // Function to display bus stops for the current page
-            function displayBusStops(busStops, page) {
-                const startIndex = (page - 1) * limit;
-                const endIndex = startIndex + limit;
-                const paginatedBusStops = busStops.slice(startIndex, endIndex);
+            localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
+            return allBusStops;
+        }
 
-                // Clear the list group and display the bus stops
-                listGroup.innerHTML = '';
-                if (busStops.length === 0) {
-                    listGroup.innerHTML = '<p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span> Searching for nearby bus stops...</p>';
-                    prevButton.style.display = 'none'; // Hide buttons if fetching message is shown
-                    nextButton.style.display = 'none';
-                    return;
-                }
+        // Function to display bus stops for the current page
+        function displayBusStops(busStops, page) {
+            const startIndex = (page - 1) * limit;
+            const endIndex = startIndex + limit;
+            const paginatedBusStops = busStops.slice(startIndex, endIndex);
 
-                paginatedBusStops.forEach((busStop) => {
-                    const listItem = document.createElement('a');
-                    listItem.href = `sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
-                    listItem.className = 'list-group-item list-group-item-action bus-stop-code';
-                    listItem.setAttribute('data-code', busStop.BusStopCode);
-                    listItem.setAttribute('data-description', busStop.Description);
-                    listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
-                    listGroup.appendChild(listItem);
+            listGroup.innerHTML = '';
+            if (busStops.length === 0) {
+                listGroup.innerHTML = '<p style="text-align:center;">No bus stops found.</p>';
+                prevButton.style.display = 'none';
+                nextButton.style.display = 'none';
+                return;
+            }
+
+            paginatedBusStops.forEach((busStop) => {
+                const listItem = document.createElement('div');
+                listItem.className = 'list-group-item';
+                listItem.style.display = 'flex';
+                listItem.style.justifyContent = 'space-between';
+                listItem.style.alignItems = 'center';
+
+                // Make the bus stop details clickable
+                const link = document.createElement('a');
+                link.href = `sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                link.style.flexGrow = '1';
+                link.style.textDecoration = 'none';
+                link.style.color = 'inherit';
+
+                // Bookmark button
+                const bookmarkButton = document.createElement('button');
+                bookmarkButton.textContent = 'Bookmark';
+                bookmarkButton.className = 'btn btn-primary btn-sm';
+                bookmarkButton.addEventListener('click', (event) => {
+                    event.stopPropagation(); // Prevent the click from triggering the link
+                    event.preventDefault(); // Prevent default link behavior
+                    addBookmark(busStop);
                 });
 
-                // Check if there are any items to display
-                const hasItems = paginatedBusStops.length > 0;
-
-                // Update button states
-                prevButton.style.display = hasItems && page > 1 ? 'inline-block' : 'none';
-                nextButton.style.display = hasItems && page < totalPages ? 'inline-block' : 'none';
-            }
-
-            // Function to filter bus stops based on search input
-            function filterBusStops(query) {
-                const filteredBusStops = allBusStops.filter((busStop) => {
-                    const busStopCode = busStop.BusStopCode.toLowerCase();
-                    const description = busStop.Description.toLowerCase();
-                    return busStopCode.includes(query) || description.includes(query);
-                });
-
-                totalPages = Math.ceil(filteredBusStops.length / limit);
-                currentPage = 1; // Reset to the first page
-                displayBusStops(filteredBusStops, currentPage);
-            }
-
-            // Add event listener to the search input
-            searchInput.addEventListener('input', (event) => {
-                const query = event.target.value.toLowerCase(); // Get the search query in lowercase
-                filterBusStops(query); // Filter the bus stops based on the search query
+                listItem.appendChild(link);
+                listItem.appendChild(bookmarkButton);
+                listGroup.appendChild(listItem);
             });
 
-            // Add event listeners to pagination buttons
-            prevButton.addEventListener('click', () => {
-                if (currentPage > 1) {
-                    currentPage--;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
+            prevButton.style.display = page > 1 ? 'inline-block' : 'none';
+            nextButton.style.display = page < totalPages ? 'inline-block' : 'none';
+        }
 
-            nextButton.addEventListener('click', () => {
-                if (currentPage < totalPages) {
-                    currentPage++;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
-
-            // Load bus stops from localStorage or fetch from API
-            const cachedBusStops = localStorage.getItem('allBusStops');
-            if (cachedBusStops) {
-                console.log('Loading bus stops from localStorage...');
-                allBusStops = JSON.parse(cachedBusStops);
+        // Function to add a bookmark
+        function addBookmark(busStop) {
+            const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
+            if (!bookmarks.some((b) => b.BusStopCode === busStop.BusStopCode)) {
+                bookmarks.push(busStop);
+                localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
+                alert('Bus stop bookmarked!');
             } else {
-                console.log('Fetching all bus stops...');
-                allBusStops = await fetchAllBusStops();
+                alert('This bus stop is already bookmarked.');
             }
+        }
 
-            totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
-            displayBusStops(allBusStops, currentPage); // Display the first page
+        // Load bus stops from localStorage or fetch from API
+        const cachedBusStops = localStorage.getItem('allBusStops');
+        if (cachedBusStops) {
+            allBusStops = JSON.parse(cachedBusStops);
+        } else {
+            allBusStops = await fetchAllBusStops();
+        }
+
+        totalPages = Math.ceil(allBusStops.length / limit);
+        displayBusStops(allBusStops, currentPage);
+
+        // Pagination
+        prevButton.addEventListener('click', () => {
+            if (currentPage > 1) {
+                currentPage--;
+                displayBusStops(allBusStops, currentPage);
+            }
         });
-    </script>
+
+        nextButton.addEventListener('click', () => {
+            if (currentPage < totalPages) {
+                currentPage++;
+                displayBusStops(allBusStops, currentPage);
+            }
+        });
+
+        // Search functionality
+        searchInput.addEventListener('input', (event) => {
+            const query = event.target.value.toLowerCase();
+            const filteredBusStops = allBusStops.filter((busStop) =>
+                busStop.BusStopCode.toLowerCase().includes(query) ||
+                busStop.Description.toLowerCase().includes(query)
+            );
+            totalPages = Math.ceil(filteredBusStops.length / limit);
+            currentPage = 1;
+            displayBusStops(filteredBusStops, currentPage);
+        });
+    });
+</script>
 
 </body>
 
