--- a/bat.html
+++ b/bat.html
@@ -326,7 +326,7 @@
 
                     // Make the bus stop details clickable
                     const link = document.createElement('a');
-                    link.href = `sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                    link.href = `bat/sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
                     link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
                     link.style.flexGrow = '1';
                     link.style.textDecoration = 'none';
