--- a/bat.html
+++ b/bat.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="bat.html">Bus Arrival Timings</a>
+                                    <a href="bat.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
@@ -215,7 +215,7 @@
                     <ul>
 
                         <li>
-                            <a href="bat/nbs.html" class="active"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="#" class="active"><i class="fa-solid fa-star"></i> Favourites</a>
                         </li>
 
                         <li>
@@ -223,11 +223,7 @@
                         </li>
 
                         <li>
-                            <a href="bat/sbs.html" id="search-bus-stop-button"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
-                        </li>
-
-                        <li>
-                            <a href="bat/abs.html"><i class="fa-solid fa-bus"></i> Bus Stops</a>
+                            <a href="bat/abs.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
                         </li>
                     </ul>
 
