--- a/bat/sbs.html
+++ b/bat/sbs.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search Bus Stop | BAT</title>
+    <title>Search Bus Stop | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -195,9 +195,9 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Search Bus Stop</h1>
+                                    <h1 class="page-title" id="filter-title">Arrival Timings</h1>
                                 </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px;">
+                                <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
                                     <i class="fa-solid fa-search"
                                         style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
                                     <input type="text" id="bus-stop-search" class="form-control"
@@ -221,15 +221,16 @@
 
                     <ul>
                         <li>
-                            <a href="nbs.html">Nearby Bus Stops</a>
+                            <a href="../bat.html"><i class="fa-solid fa-star"></i> Favourites</a>
                         </li>
 
                         <li>
-                            <a href="sbs.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
-                            <a href="abs.html">Bus Stops</a>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                                Search</a>
                         </li>
                     </ul>
 
@@ -261,7 +262,7 @@
                 <thead>
                     <tr>
                         <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Departure Times</th>
+                        <th scope="col" class="departure-spacing">Arrival Times</th>
                         <th class="operator-column" scope="col">Operator</th>
                     </tr>
                 </thead>
