--- a/bat/sbs.html
+++ b/bat/sbs.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="../bat.html">Bus Arrival Timings</a>
+                                    <a href="../bat.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
