--- a/bat/abs.html
+++ b/bat/abs.html
@@ -310,7 +310,6 @@
 
     <script src="../js/isotope.pkgd.min.js"></script>
 
-
     <script src="../js/dstabs.js"></script>
 
     <script src="../js/utils.js"></script>
@@ -385,7 +384,7 @@
 
                     // Make the bus stop details clickable
                     const link = document.createElement('a');
-                    link.href = `sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                    link.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
                     link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
                     link.style.flexGrow = '1';
                     link.style.textDecoration = 'none';
