--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -294,7 +294,6 @@
 
     <script src="../js/isotope.pkgd.min.js"></script>
 
-
     <script src="../js/dstabs.js"></script>
 
     <script src="../js/utils.js"></script>
@@ -416,7 +415,7 @@ function displayBusStops(busStops) {
         // Add click event listener to the entire div
         busStopElement.addEventListener('click', () => {
             // Navigate to bat.html with the BusStopCode as a query parameter
-            window.location.href = `sbs.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
         });
 
         busStopsContainer.appendChild(busStopElement);
@@ -448,8 +447,6 @@ function displayBusStops(busStops) {
                 }
             }
         });
-
-
 
     </script>
 </body>
