--- a/buszy.html
+++ b/buszy.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="bat.html">Buszy</a>
+                                    <a href="buszy.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
@@ -280,7 +280,7 @@
 
     <script src="js/navtabs.js"></script>
 
-    <script src="bat/bat.js"></script>
+    <script src="bat/buszy.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
